--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- props -->
     <img id="imgProjectile" src="./assets/projectile.png" alt="">
+    <img id="imgGears" src="./assets/gears.png" alt="">
 
     <canvas id="canvas"></canvas>
     <script src="./script.js"></script>
