Group assets by type

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alien Invaders</title>
-    <link rel="shortcut icon" href="./assets/favicon3.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icons/favicon3.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,20 +15,20 @@
 
 <body>
     <!-- layers -->
-    <img id="imgLayer1" src="./assets/layer1.png" alt="">
-    <img id="imgLayer2" src="./assets/layer2.png" alt="">
-    <img id="imgLayer3" src="./assets/layer3.png" alt="">
-    <img id="imgLayer4" src="./assets/layer4.png" alt="">
+    <img id="imgLayer1" src="./assets/images/layer1.png" alt="">
+    <img id="imgLayer2" src="./assets/images/layer2.png" alt="">
+    <img id="imgLayer3" src="./assets/images/layer3.png" alt="">
+    <img id="imgLayer4" src="./assets/images/layer4.png" alt="">
 
     <!-- characters -->
-    <img id="imgPlayer" src="./assets/player.png" alt="">
-    <img id="imgAngler1" src="./assets/angler1.png" alt="">
-    <img id="imgAngler2" src="./assets/angler2.png" alt="">
-    <img id="imgLucky" src="./assets/lucky.png" alt="">
+    <img id="imgPlayer" src="./assets/images/player.png" alt="">
+    <img id="imgAngler1" src="./assets/images/angler1.png" alt="">
+    <img id="imgAngler2" src="./assets/images/angler2.png" alt="">
+    <img id="imgLucky" src="./assets/images/lucky.png" alt="">
 
     <!-- props -->
-    <img id="imgProjectile" src="./assets/projectile.png" alt="">
-    <img id="imgGears" src="./assets/gears.png" alt="">
+    <img id="imgProjectile" src="./assets/images/projectile.png" alt="">
+    <img id="imgGears" src="./assets/images/gears.png" alt="">
 
     <canvas id="canvas"></canvas>
     <script src="./script.js"></script>
