Add hivewhale + drone enemy

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <img id="imgAngler1" src="./assets/images/angler1.png" alt="">
     <img id="imgAngler2" src="./assets/images/angler2.png" alt="">
     <img id="imgLucky" src="./assets/images/lucky.png" alt="">
+    <img id="imgHiveWhale" src="./assets/images/hivewhale.png" alt="">
+    <img id="imgDrone" src="./assets/images/drone.png" alt="">
 
     <!-- props -->
     <img id="imgProjectile" src="./assets/images/projectile.png" alt="">
