Use animated fireball projectile

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!-- props -->
     <img id="imgProjectile" src="./assets/images/projectile.png" alt="">
+    <img id="imgFireball" src="./assets/images/fireball.png" alt="">
     <img id="imgGears" src="./assets/images/gears.png" alt="">
 
     <canvas id="canvas"></canvas>
