Add explosion on enemy destruction

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <img id="imgProjectile" src="./assets/images/projectile.png" alt="">
     <img id="imgFireball" src="./assets/images/fireball.png" alt="">
     <img id="imgGears" src="./assets/images/gears.png" alt="">
+    <img id="imgFireExplosion" src="./assets/images/fireExplosion.png" alt="">
+    <img id="imgSmokeExplosion" src="./assets/images/smokeExplosion.png" alt="">
 
     <canvas id="canvas"></canvas>
     <script src="./script.js"></script>
