Add remaining enemy types

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <img id="imgLucky" src="./assets/images/lucky.png" alt="">
     <img id="imgHiveWhale" src="./assets/images/hivewhale.png" alt="">
     <img id="imgDrone" src="./assets/images/drone.png" alt="">
+    <img id="imgBulbWhale" src="./assets/images/bulbwhale.png" alt="">
+    <img id="imgMoonFish" src="./assets/images/moonfish.png" alt="">
+    <img id="imgStalker" src="./assets/images/stalker.png" alt="">
+    <img id="imgRazorFin" src="./assets/images/razorfin.png" alt="">
 
     <!-- props -->
     <img id="imgProjectile" src="./assets/images/projectile.png" alt="">
