Add sound effects

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     <img id="imgFireExplosion" src="./assets/images/fireExplosion.png" alt="">
     <img id="imgSmokeExplosion" src="./assets/images/smokeExplosion.png" alt="">
 
+
+    <!-- sounds -->
+    <audio id="audioPowerUp" src="assets/sounds/powerup.wav"></audio>
+    <audio id="audioPowerDown" src="assets/sounds/powerdown.wav"></audio>
+    <audio id="audioShot" src="assets/sounds/shot.wav"></audio>
+    <audio id="audioPoof" src="assets/sounds/poof.mp3"></audio>
+    <audio id="audioShield" src="assets/sounds/shield.wav"></audio>
+    <audio id="audioExplosion" src="assets/sounds/explosion.wav"></audio>
+
     <canvas id="canvas"></canvas>
     <script src="./script.js"></script>
 </body>
