--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <img id="imgGears" src="./assets/images/gears.png" alt="">
     <img id="imgFireExplosion" src="./assets/images/fireExplosion.png" alt="">
     <img id="imgSmokeExplosion" src="./assets/images/smokeExplosion.png" alt="">
+    <img id="imgShield" src="./assets/images/shield.png" alt="">
 
 
     <!-- sounds -->
