Add github link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     <audio id="audioExplosion" src="assets/sounds/explosion.wav"></audio>
 
     <canvas id="canvas"></canvas>
+
+    <div class="github-banner">
+        <a href="https://github.com/KarenOk/alien-invaders-game" target="_blank" class="github-link">
+            <img src="./assets/icons/github.svg" alt="Fork me on Github"></img></a>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 
