Hide for mobile + tweaks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 </a>
         </div>
 
+        <section id="mobile" class="mobile">
+                <h1> Sorry 😊 </h1>
+                <p> For the best playing experience, this game is only available on desktop! </p>
+        </section>
+
         <section id="game" class="gamescreen hidden">
                 <div class="game-controls">
                         <button class="playBtn icon-button icon-button--circle hidden"><i class="fa-solid fa-play"
@@ -104,7 +109,7 @@
                 </div>
         </section>
 
-        <div id="modal" class="modal hidden">
+        <div id="modal" class="modal center hidden">
                 <div class="modal-content">
                         <button id="modalClose" class="modal-close"><i class="fa-regular fa-circle-xmark"
                                         title="Close Popup"></i></button>
@@ -327,7 +332,7 @@
                                                                                 live(s).
                                                                                 Kill this enemy to gain <span
                                                                                         class="placeholder points-moonfish"></span>
-                                                                                point(s) and enter
+                                                                                point(s) AND enter
                                                                                 power-up mode.
                                                                         </p>
                                                                 </td>
@@ -342,7 +347,7 @@
                                                                                 live(s).
                                                                                 Kill this enemy to gain <span
                                                                                         class="placeholder points-hivewhale"></span>
-                                                                                point(s) and release
+                                                                                point(s) AND release
                                                                                 <span class="placeholder drones"></span>
                                                                                 drone(s).
                                                                         </p>
@@ -356,7 +361,8 @@
                                                                         <strong> DRONE</strong> <br><br>
                                                                         <p> Special enemy type with <span
                                                                                         class="placeholder lives-drone"></span>
-                                                                                live(s) only generated
+                                                                                live(s) that moves really fast. Only
+                                                                                generated
                                                                                 when a Moon Fish is killed.
                                                                                 Kill this enemy to gain <span
                                                                                         class="placeholder points-drone"></span>
